# mamba-mic

./: .gitignore  README.md  SegMamba.slurm  all_prostate_data.ipynb  brats-eda.ipynb  brats2024_submission.py  hnts-mrg.ipynb  idun_job.slurm  inference.py  job.slurm  main.py  oce_create_labels.ipynb  oce_inference_cells.ipynb  ocelot_dataloader_notebook.ipynb  ocelot_util.py  picai_inference_eval.py  picaiv2_eval.ipynb  prostate_analysis.ipynb  prostate_preprocessing_sandbox.ipynb  pyproject.toml  requirements.txt  system.py  test.ipynb  train.py  train_example.py
brats_2024_metrics/: metrics_GLI.py
causal-conv1d/: setup.py
causal_conv1d/: setup.py
configs/: DynUnet-midRT-no-mask.json  DynUnet-midRT.json  DynUnet-preRT.json  default.yaml  default_eval.yaml  segmamba-preRT.json  segresnet-adjcont.json  vis_mamba_seg.yaml
data_modules/: brats2024.py  decathlon.py  hnts-mrg.py  hnts_mrg.py  ocelot.py  pi_cai.py  pi_caiv2.py
mamba-mic/: brats2024_submission.py  system.py
mamba_2d/: mamba_utils.py
mamba_3d/: setup.py
mamba_mic/: base_module.py  brats2024_submission.py  camus_module.py  ocelot_module.py  picai_inference_eval.py  picai_module.py  system.py  train_example.py
models/: comp_seg.py  segmamba.py  swin_umamba.py  umamba.py  unet.py  vimseg.py  vssd.py
notebooks/: all_prostate_data.ipynb  brats-eda.ipynb  brats2024_lesion_wise.ipynb  btcv.ipynb  camus-eda.ipynb  camus_data_module.ipynb  camus_eval_ef.ipynb  camus_eval_ef.py  hnts-mrg.ipynb  hnts_mrg_performance_eval.ipynb  picai_viz.ipynb  picaiv2_inference.ipynb  prostate_analysis.ipynb  (+2 more)
(+67 files in other folders)
